# logger_common

./: CMakeLists.txt  Kconfig  Kconfig.projbuild  README.md  common_cfg.c  common_private.h  config_errors.c  config_example.h  config_lock.c  config_manager.c  config_manager_admin.c  config_manager_advanced.c  config_manager_fw_update.c  config_manager_gps.c  config_manager_main.c  config_manager_screen.c  config_manager_ubx.c  config_manager_wifi.c  config_migration_template.c  config_observer.c  config_template.c  idf_component.yml  logger_buffer_pool.c  logger_common.c  logger_fixed_pool.c  logger_vibration.c
cfg/: config_example.h  config_lock.c  config_manager.c  config_manager_admin.c  config_manager_advanced.c  config_manager_fw_update.c  config_manager_gps.c  config_manager_screen.c  config_manager_ubx.c  config_manager_wifi.c  config_migration_template.c  config_observer.c  config_registry.c  config_storage.c  config_template.c  unified_config.c
include/: common_cfg.h  common_log.h  config.h  config_admin.h  config_advanced.h  config_errors.h  config_events.h  config_fw_update.h  config_gps.h  config_helpers.h  config_lock.h  config_main.h  config_manager.h  config_observer.h  config_registry.h  config_screen.h  config_storage.h  config_template.h  config_ubx.h  config_wifi.h  logger_buffer_pool.h  logger_common.h  logger_events.h  logger_fixed_pool.h  logger_vibration.h  unified_config.h
